# gimpsep-code-terrorists

./: .gitignore  CMakeLists.txt  README.md
Instructions/: Project_2025.txt
src/: main.cpp
src/advanced/: face_detection.cpp  face_detection.hpp  inpainting.cpp  inpainting.hpp  object_detection.cpp  object_detection.hpp  video_processing.cpp  video_processing.hpp
src/cli/: cli_parser.hpp
src/core/: brightness.cpp  brightness.hpp  canny.cpp  canny.hpp  morphology.cpp  morphology.hpp  resize.cpp  resize.hpp  stitching.cpp  stitching.hpp
test_assets/output/: static_bg_mask.avi
